@@ -11,10 +11,15 @@ import java.util.Optional;
  */
 public class Path {
 	
-	private List<Destination> destinations = new LinkedList<>();
+	private LinkedList<Destination> destinations = new LinkedList<>();
 
 	public Path() {
 		super();
+	}
+	
+	public Path(Destination destination) {
+		super();
+		destinations.add(destination);
 	}
 	
 	public Destination addDestination(Destination destination) { 
@@ -31,16 +36,43 @@ public class Path {
 		return sum.isPresent()?sum.get():Integer.MAX_VALUE;
 	}
 
-	@Override
-	public String toString() {
-		return "Path [destinations=" + destinations + " Distance " + getDistance() + "]";
-	}
-	
 	public Destination getDestination() { 
 		Destination dest = null; 
 		if(destinations.size() > 0) { 
-			dest  = new Destination(destinations.get(0).getFrom() , destinations.get(destinations.size() -1).getTo() , getDistance());
+			dest  = new Destination(destinations.get(0).getFrom() , destinations.getLast().getTo() , getDistance());
 		}
 		return Optional.ofNullable(dest).orElse(new Destination());
+	}
+
+
+	@Override
+	public String toString() {
+		return "Path [" + "Destination()="
+				+ getDestination() + " destinations=" + destinations + ", getDistance()=" + getDistance() + "]";
+	}
+
+	@Override
+	public int hashCode() {
+		final int prime = 31;
+		int result = 1;
+		result = prime * result + ((destinations == null) ? 0 : destinations.hashCode());
+		return result;
+	}
+
+	@Override
+	public boolean equals(Object obj) {
+		if (this == obj)
+			return true;
+		if (obj == null)
+			return false;
+		if (getClass() != obj.getClass())
+			return false;
+		Path other = (Path) obj;
+		if (destinations == null) {
+			if (other.destinations != null)
+				return false;
+		} else if (!destinations.equals(other.destinations))
+			return false;
+		return true;
 	}
 }
